Extracted resource locator logic into its own functional SPI.